# OpenCV_Study

./: .gitignore  README.md
0.hello_world/: CMakeLists.txt  hello_world.cpp
1.OpenCV_Start/: CMakeLists.txt  opencv_start.cpp
10.膨胀和腐蚀/: main.cpp
11.形态学操作/: main.cpp
12.形态学操作应用-提取水平和垂直线/: main.cpp
13.图像金字塔-上下采样、高斯不同/: main.cpp
14.基本阈值操作/: main.cpp
15.自定义线性滤波/: main.cpp
16.边缘处理/: main.cpp
17.sobel算子/: main.cpp
18.laplance算子/: main.cpp
19.Canny边缘检测/: main.cpp
2.加载、修改、保存图像/: main.cpp
20.霍夫直线/: main.cpp
21.霍夫圆/: main.cpp
22.像素重映射/: main.cpp
23.直方图均衡化/: main.cpp
24.直方图计算/: main.cpp
25.直方图比较/: main.cpp
26.直方图反向投影/: main.cpp
27.模板匹配（TemplateMatch）/: CMakeLists.txt  main.cpp
28.轮廓发现/: main.cpp
29.凸包-Convex Hull/: main.cpp
3.矩阵的掩码操作/: main.cpp
30.轮廓周围绘制矩形框和圆形框/: CMakeLists.txt  main.cpp
32.点与多边形关系/: main.cpp
33.基于距离变换和分水岭的图像分割/: main.cpp
4.Mat对象/: main.cpp
5.图像操作/: main.cpp
6.图像混合/: main.cpp
7.调整图像亮度和对比度/: main.cpp
8.0.绘图与文字/: main.cpp
8.1.随机画线/: main.cpp
9.1.图片模糊/: CMakeLists.txt  main.cpp
9.2.图片模糊/: main.cpp
